force-app/main/default/objects/Chart_of_Account_Type__c/Chart_of_Account_Type__c.object-meta.xml
<CustomObject>
    <label>Chart of Account Type</label>
    <nameField>
        <label>Chart of Account Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart of Account Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>