force-app/main/default/objects/Chart_of_Account_Type__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>