force-app/main/default/objects/Chart_of_Account_Type__c/fields/Code_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Code_Maximum__c</fullName>
    <label>Code Maximum</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>