force-app/main/default/objects/Chart_of_Account_Type__c/fields/Code_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Code_Minimum__c</fullName>
    <label>Code Minimum</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>