force-app/main/default/objects/Chart_of_Account_Type__c/fields/Debit_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Debit_Behavior__c</fullName>
    <description>Does a Debit Increase (+) the Account&apos;s Balance or Decrease (-) the Account&apos;s Balance</description>
    <label>Debit Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Increase (+)</fullName>
            </value>
            <value>
                <fullName>Decrease (-)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>