force-app/main/default/objects/Chart_of_Account_Type__c/fields/Financial_Report__c.field-meta.xml
<CustomField>
    <fullName>Financial_Report__c</fullName>
    <label>Financial Report</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Profit &amp; Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>