force-app/main/default/objects/Chart_of_Account_Type__c/fields/Left_or_Right__c.field-meta.xml
<CustomField>
    <fullName>Left_or_Right__c</fullName>
    <label>Left or Right</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>