force-app/main/default/objects/Chart_of_Account_Type__c/validationRules/DebitOppositeCredit.validationRule-meta.xml
<ValidationRule>
    <fullName>DebitOppositeCredit</fullName>
    <active>true</active>
    <description>Debit and Credit must not match.</description>
    <errorConditionFormula>TEXT(Debit_Behavior__c)  =  TEXT(Credit_Behavior__c)</errorConditionFormula>
    <errorDisplayField>Debit_Behavior__c</errorDisplayField>
    <errorMessage>Debit and Credit must not match.</errorMessage>
</ValidationRule>