force-app/main/default/objects/Chart_of_Account_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Debit_Behavior__c</columns>
    <columns>Credit_Behavior__c</columns>
    <columns>NAME</columns>
    <columns>COA_Code__c</columns>
    <columns>Code_Minimum__c</columns>
    <columns>Code_Maximum__c</columns>
    <columns>Financial_Report__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>